--- a/index.html
+++ b/index.html
@@ -244,6 +244,150 @@
     </div> <!-- end of slider-1 -->
     <!-- end of testimonials -->
 
+
+
+    <!-- Features -->
+    <div id="downloads" class="tabs">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>DOWNLOADS</h2>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="row">
+
+                <!-- Tabs Links -->
+                <ul class="nav nav-tabs" id="dfsTabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="nav-tab-1" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="false">MAPS</a>
+                    </li><i class="fas fa-square"></i>
+                    <li class="nav-item">
+                        <a class="nav-link" id="nav-tab-2" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="true">ADDONS</a>
+                    </li><i class="fas fa-square"></i>
+                    <li class="nav-item">
+                        <a class="nav-link" id="nav-tab-3" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">SKINS</a>
+                    </li>
+                </ul>
+                <!-- end of tabs links -->
+
+
+                <!-- Tabs Content-->
+                <div class="tab-content" id="dfsTabsContent">
+                    <!-- Tab -->
+                    <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="tab-1">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <!-- Image Pane -->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                    </div>
+                                    <!-- end of image pane -->
+                                    <!-- Icon Cards Pane -->
+                                    <div class="col-lg-4">
+                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
+<br>and maps to provide to Minecraft Bedrock players.
+<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
+                                    </div>
+                                    <!-- end of icon cards pane -->
+                                </div>
+                                <div class="col-lg-4">
+                                    <!-- Image Pane -->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                    </div>
+                                    <!-- end of image pane -->
+                                    <!-- Icon Cards Pane -->
+                                    <div class="col-lg-4">
+                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
+<br>and maps to provide to Minecraft Bedrock players.
+<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
+                                    </div>
+                                    <!-- end of icon cards pane -->
+                                </div>
+                            </div> <!-- end of row -->
+                        </div> <!-- end of container -->
+                    </div> <!-- end of tab-pane -->
+                    <!-- end of tab -->
+
+                    <!-- Tab -->
+                    <div class="tab-pane fade" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <!-- Image Pane -->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                    </div>
+                                    <!-- end of image pane -->
+                                    <!-- Icon Cards Pane -->
+                                    <div class="col-lg-4">
+                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
+<br>and maps to provide to Minecraft Bedrock players.
+<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
+                                    </div>
+                                    <!-- end of icon cards pane -->
+                                </div>
+                                <div class="col-lg-4">
+                                    <!-- Image Pane -->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                    </div>
+                                    <!-- end of image pane -->
+                                    <!-- Icon Cards Pane -->
+                                    <div class="col-lg-4">
+                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
+<br>and maps to provide to Minecraft Bedrock players.
+<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
+                                    </div>
+                                    <!-- end of icon cards pane -->
+                                </div>
+                            </div> <!-- end of row -->
+                        </div> <!-- end of container --> <!-- end of container -->
+                    </div><!-- end of tab-pane -->
+
+                    <!-- Tab -->
+                    <div class="tab-pane fade" id="tab-3" role="tabpanel" aria-labelledby="tab-3">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <!-- Image Pane -->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                    </div>
+                                    <!-- end of image pane -->
+                                    <!-- Icon Cards Pane -->
+                                    <div class="col-lg-4">
+                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
+<br>and maps to provide to Minecraft Bedrock players.
+<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
+                                    </div>
+                                    <!-- end of icon cards pane -->
+                                </div>
+                                <div class="col-lg-4">
+                                    <!-- Image Pane -->
+                                    <div class="col-lg-4">
+                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                    </div>
+                                    <!-- end of image pane -->
+                                    <!-- Icon Cards Pane -->
+                                    <div class="col-lg-4">
+                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
+<br>and maps to provide to Minecraft Bedrock players.
+<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
+                                    </div>
+                                    <!-- end of icon cards pane -->
+                                </div>
+                            </div> <!-- end of row -->
+                        </div> <!-- end of container -->
+                    </div><!-- end of tab-pane -->
+                    <!-- end of tab -->
+                </div> <!-- end of tab-content -->
+                <!-- end of tabs content -->
+            </div> <!-- end of row --> 
+        </div> <!-- end of container --> 
+    </div> <!-- end of tabs -->
+
     <!-- Features -->
     <div id="dfs" class="tabs">
         <div class="container">
