--- a/index.html
+++ b/index.html
@@ -277,33 +277,46 @@
                     <div class="tab-pane fade show active" id="tab-1" role="tabpanel" aria-labelledby="tab-1">
                         <div class="container">
                             <div class="row">
-                                <div class="col-lg-4">
-                                    <!-- Image Pane -->
-                                    <div class="col-lg-4">
-                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
-                                    </div>
-                                    <!-- end of image pane -->
-                                    <!-- Icon Cards Pane -->
-                                    <div class="col-lg-4">
-                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
-<br>and maps to provide to Minecraft Bedrock players.
-<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
-                                    </div>
-                                    <!-- end of icon cards pane -->
-                                </div>
-                                <div class="col-lg-4">
-                                    <!-- Image Pane -->
-                                    <div class="col-lg-4">
-                                        <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
-                                    </div>
-                                    <!-- end of image pane -->
-                                    <!-- Icon Cards Pane -->
-                                    <div class="col-lg-4">
-                                        <p>Our mission is to create quality and unique addons, texture packs, skins,
-<br>and maps to provide to Minecraft Bedrock players.
-<br>As a team we aim to expand the potential of Minecraft to make it a more enjoyable experience.</p>
-                                    </div>
-                                    <!-- end of icon cards pane -->
+                                <div class="col-md-8">
+                                    
+                                    <div class="icon-cards-area">
+                                            <div class="card">
+                                                <div class="card-icon">
+                                                     <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h4 class="card-title">Good Foundation</h4>
+                                                    <p>Get a solid foundation for your self development efforts. Try Leno mobile app for any mobile platform</p>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-icon">
+                                                     <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h4 class="card-title">Easy Reading</h4>
+                                                    <p>Reading focus mode for long form articles, ebooks and other materials which involve large text areas</p>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-icon">
+                                                     <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h4 class="card-title">Calendar Input</h4>
+                                                    <p>Schedule your appointments, meetings and periodical evaluations using the provided in-app calendar option</p>
+                                                </div>
+                                            </div>
+                                            <div class="card">
+                                                <div class="card-icon">
+                                                     <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
+                                                </div>
+                                                <div class="card-body">
+                                                    <h4 class="card-title">Visual Editor</h4>
+                                                    <p>Leno provides a well designed and ergonomic visual editor for you to edit your notes and input data</p>
+                                                </div>
+                                            </div>
+                                    </div> <!-- end of icon cards area -->
                                 </div>
                             </div> <!-- end of row -->
                         </div> <!-- end of container -->
@@ -387,8 +400,7 @@
             </div> <!-- end of row --> 
         </div> <!-- end of container --> 
     </div> <!-- end of tabs -->
-
-    <!-- Features -->
+	<!-- Features -->
     <div id="dfs" class="tabs">
         <div class="container">
             <div class="row">
