--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                     
                                     <div class="icon-cards-area">
                                             <div class="card">
-                                                <div class="card-icon">
+                                                <div class="col-md-8">
                                                      <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
                                                 </div>
                                                 <div class="card-body">
@@ -290,7 +290,7 @@
                                                 </div>
                                             </div>
                                             <div class="card">
-                                                <div class="card-icon">
+                                                <div class="col-md-8">
                                                      <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
                                                 </div>
                                                 <div class="card-body">
@@ -299,7 +299,7 @@
                                                 </div>
                                             </div>
                                             <div class="card">
-                                                <div class="card-icon">
+                                                <div class="col-md-8">
                                                      <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
                                                 </div>
                                                 <div class="card-body">
@@ -308,7 +308,7 @@
                                                 </div>
                                             </div>
                                             <div class="card">
-                                                <div class="card-icon">
+                                                <div class="col-md-8">
                                                      <img class="img-fluid" src="images/logo_dfs.png" alt="alternative">
                                                 </div>
                                                 <div class="card-body">
@@ -400,6 +400,7 @@
             </div> <!-- end of row --> 
         </div> <!-- end of container --> 
     </div> <!-- end of tabs -->
+	
 	<!-- Features -->
     <div id="dfs" class="tabs">
         <div class="container">
