--- a/index.html
+++ b/index.html
@@ -41,7 +41,17 @@
     <link rel="icon" href="images/pack_icon.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
-	<div id="includedHeader"></div>
+	    
+    <!-- Preloader -->
+	<div class="spinner-wrapper">
+        <div class="spinner">
+            <div class="bounce1"></div>
+            <div class="bounce2"></div>
+            <div class="bounce3"></div>
+        </div>
+    </div>
+    <!-- end of preloader -->
+    <div id="includedHeader"></div>
 
     <!-- Testimonials -->
     <div id="members" class="slider-1">
