--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
 		</div>
 		
 		<!-- Expansive Fantasy -->
-		<div class="row">
-			<div id="details" class="basic-2">
+		<div class="container">
+			<div id="Ef" class="row">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6">
@@ -361,11 +361,10 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		
 		
 		<!-- Ultimate Fantasy Skin Pack -->
-		<div class="row">
-			<div id="details" class="basic-2">
+			<div id="details" class="row">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-6">
