--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 	
 	<!-- Downloads -->
 	
-	<div id="downloads" class="basic-2">
+	<div id="downloads" class="basic-3">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
@@ -329,8 +329,7 @@
 		</div>
 		
 		<!-- Expansive Fantasy -->
-			<div id="Ef" class="row">
-				<div class="container">
+			<div id="Ef" class="container">
 					<div class="row">
 						<div class="col-lg-6">
 							<img class="img-fluid" src="images/addons/ef_cover.png" alt="alternative">
@@ -358,13 +357,12 @@
 							<a class="btn-solid-reg popup-with-move-anim" href="#EF">Details</a>
 						</div>
 					</div>
-				</div>
+				
 			</div>
 		
 		
 		<!-- Ultimate Fantasy Skin Pack -->
-			<div id="details" class="row">
-				<div class="container">
+			<div id="details" class="container">
 					<div class="row">
 						<div class="col-lg-6">
 							<img class="img-fluid" src="images/skins/twiggy_skin_pack_cover.png" alt="alternative">
@@ -392,7 +390,7 @@
 							<a class="btn-solid-reg popup-with-move-anim" href="#UFSP">Details</a>
 						</div>
 					</div>
-				</div>
+				
 			</div>
 		
 		
