--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
 		</div>
 		
 		<!-- Expansive Fantasy -->
-			<div id="Ef" class="container">
-					<div class="row">
+			<div id="Ef" class="basic-3">
+					<div class="container"><div class="row">
 						<div class="col-lg-6">
 							<img class="img-fluid" src="images/addons/ef_cover.png" alt="alternative">
 						</div>
@@ -356,14 +356,14 @@
 							</table>
 							<a class="btn-solid-reg popup-with-move-anim" href="#EF">Details</a>
 						</div>
-					</div>
+					</div></div>
 				
 			</div>
 		
 		
 		<!-- Ultimate Fantasy Skin Pack -->
-			<div id="details" class="container">
-					<div class="row">
+			<div id="details" class="basic-3">
+					<div class="container"><div class="row">
 						<div class="col-lg-6">
 							<img class="img-fluid" src="images/skins/twiggy_skin_pack_cover.png" alt="alternative">
 						</div>
@@ -389,7 +389,7 @@
 							</table>
 							<a class="btn-solid-reg popup-with-move-anim" href="#UFSP">Details</a>
 						</div>
-					</div>
+					</div></div>
 				
 			</div>
 		
