Fixed profile picture size

--- a/index.template.html
+++ b/index.template.html
@@ -139,10 +139,10 @@
 					<div class="profilepic"><img staticimage src="images/members/zahf.png"></div>
 				</div>
 				<div id="twiggy">
-					<div class="profilepic"><img staticimage src="images/members/twiggy.png"></div>
+					<div class="profilepic"><img staticimage src="images/members/Twiggy.png"></div>
 				</div>
 				<div id="foxfocus">
-					<div class="profilepic"><img staticimage src="images/members/FoxFocus.png"></div>
+					<div class="profilepic"><img staticimage src="images/members/foxfocus.png"></div>
 				</div>
 				<div id="demi">
 					<div class="profilepic"><img staticimage src="images/members/demigods.png"></div>
