--- a/index.template.html
+++ b/index.template.html
@@ -62,23 +62,19 @@
 			}
 			// Auto hide the menubar on mobile
 			function onWindowResize() {
-			if(window.screen.width < 720){
+			if(window.innerWidth < 720){
 			try{
-			var self = document.getElementById("asldkfjhasdfoi");
-			// self.style.display = "block";
-			self.innerText = "...";
-			// var elm = document.querySelectorAll(".subnavbar>a:not(.closebutton)");
-			// for(var i in elm){
-			// elm[i].style.display = "none";
-			// }
+				var self = document.getElementById("asldkfjhasdfoi");
+				collapsePanel(self);
 			}catch(e){}
 			}else{
 			try{
-			var self = document.getElementById("asldkfjhasdfoi");
-			// self.style.display = "none";
-			var elm = document.querySelectorAll(".subnavbar>a:not(.closebutton)");
-			for(var i in elm){
-			elm[i].style.display = "block";
+				console.log(window.width);
+				var self = document.getElementById("asldkfjhasdfoi");
+				// self.style.display = "none";
+				var elm = document.querySelectorAll(".subnavbar>a:not(.closebutton)");
+				for(var i in elm){
+				elm[i].style.display = "block";
 			}
 			}catch(e){}
 			}
@@ -87,7 +83,7 @@
 			window.onresize = onWindowResize;
 		</script>
 	</head>
-	<body onload="onWindowResize();">
+	<body onload="onWindowResize()">
 		<script>
 			CSS.paintWorklet.addModule('./bubblePaint.js')
 		</script>
@@ -130,10 +126,11 @@
 					As a team we aim to expand
 					the potential of Minecraft
 					to make it a more enjoyable experience.
+					<a href="/subpages/about.html"><button>About us</button></a>
 				</p>
 			</div>
 		</div>
-		<div class="columncontainer">
+		<!-- <div class="columncontainer">
 			<div class="teamskin">
 				<div id="zahf">
 					<div class="profilepic"><img staticimage src="images/members/zahf.png"></div>
@@ -248,7 +245,7 @@
 				}
 				refreshActiveProfile();
 			</script>
-		</div>
+		</div> -->
 		<div class="GENERATED"></div>
 		<div class="columncontainer">
 			<img src="posts/addons/expansive-fantasy/thumb.png">
