--- a/subpages/about.html
+++ b/subpages/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="../index.css">
+        <link rel="stylesheet" href="about.css">
         <!-- <link type="text/css" rel="stylesheet" href="navbar.css"> -->
         <!-- <link rel="stylesheet" href="nav.css"> -->
         <link rel="icon" type="image/png" href="../images/logo_dfs.png">
@@ -57,15 +58,10 @@
                 }
                 // Auto hide the menubar on mobile
                 function onWindowResize() {
-                    if(window.screen.width < 720){
+                    if(window.innerWidth < 720){
                         try{
                             var self = document.getElementById("asldkfjhasdfoi");
-                            // self.style.display = "block";
-                            self.innerText = "...";
-                            // var elm = document.querySelectorAll(".subnavbar>a:not(.closebutton)");
-                            // for(var i in elm){
-                            //     elm[i].style.display = "none";
-                            // }
+                            collapsePanel(self);
                         }catch(e){}
                     }else{
                         try{
@@ -124,6 +120,65 @@
                     to make it a more enjoyable experience.</p>
             </div>
         </div>
+
+        <div class="profile-container">
+            <div class="profile" id="zahf">
+                
+                <h2><img src="../images/members/zahf.png">Zahf<br>The team leader</h2>
+                <p>Founder of Dragon-Force-Studio. He leads the development of the team, making sure the content made by the DragonForce is high quality.</p>
+            </div>
+            <div class="profile" id="twiggy">
+                <h2><img src="../images/members/Twiggy.png">TWIGGY<br>The modeller</h2>
+                <p>
+                    Modeller and animator of the team. Always wanted to tame and ride a dragon through the vast biomes. I'm still learning more and more , everytime I make a new model I learn something new to take my model to the next level.
+                </p>
+                <br>
+                <a href="https://m.youtube.com/channel/UCAvNrRs37Gt5b2biu1N7-oQ">YouTube channel</a>
+                <br>
+                <a href="https://twitter.com/TWIGGY_1006?s=09">Twitter</a>
+            </div>
+            <div class="profile" id="foxfocus">
+                <h2><img src="../images/members/FoxFocus.png">FoxFocus<br>Team Modeller</h2>
+                <p>A 14 year old modeler, She draws, do creative writing, yoga, and comic reading.</p>
+            </div>
+            <div class="profile" id="demi">
+                <h2><img src="../images/members/demigods.png">Demi<br>Team Modeller</h2>
+                <p>A.k.a Demigod. An artist with many dreams.</p>
+            </div>
+            <div class="profile" id="ripper">
+                <h2><img src="../images/members/LegendaryRipper.png">Reapper<br>Team Modeller</h2>
+                <p>A 14 years old teenager who loves making models and texture. Good at textures and models i love drawing.</p>
+            </div>
+            <div class="profile" id="hanprogramer">
+                <h2><img src="../images/members/Hanprogramer.png">Hanprogramer<br>Web Developer & Renderer</h2>
+                <p>A 17 y/o. Loves making games and designing apps. Also have some skills in web development and Blender rendering.</p>
+            </div>
+            <div class="profile" id="justinMN">
+                <h2><img src="../images/members/JustinMN.jpg">JustinMN<br>Pixel Artist</h2>
+                <p>A 15 year-old guy who loves art of any sort.</p>
+            </div>
+            <div class="profile" id="code_error">
+                <h2><img src="../images/members/Code_Error.jpg">Core_Error<br>Team Modeller</h2>
+                <p>A 15 year old who enjoys creating fantasy models and story writing. Xbox gamer tag "killen V".</p>
+            </div>
+            <div class="profile" id="brexit">
+                <h2><img src="../images/members/brexit.jpg">Brexit_Box<br>Team Modeller</h2>
+                <p>A bossy teenager who makes models,works out,occasionally spars when they have the chance, and watches anime.</p>
+            </div>
+            <div class="profile" id="hax">
+                <h2><img src="../images/members/HaxTheCharizard.png">HaxTheCharizard<br>Team Coder</h2>
+                <p>Minecraft Bedrock Edition modder, creator of the Tinker's Legacy mod.</p>
+            </div>
+            <div class="profile" id="koda">
+                <h2><img src="../images/members/KodaSoda.png">Koda Soda<br>Team Modeller</h2>
+                <p>Just an ordinary dude online that likes to model and draw.</p>
+            </div>
+            <div class="profile" id="lykos">
+                <h2><img src="../images/members/Lykos the Fallen.png">Lykos the Fallen<br>Moderator</h2>
+                <p> I'm Lykos, I'm 14 years old, and I'll help in anyway that I can!</p>
+            </div>
+        </div>
+
         <a href="/index.html"><button>Browse our content</button></a>
         <div class="footer">
             <div class="container">
