--- a/subpages/about.html
+++ b/subpages/about.html
@@ -124,13 +124,13 @@
         <div class="profile-container">
             <div class="profile" id="zahf">
                 
-                <h2><img src="../images/members/zahf.png">Zahf<br>The team leader</h2>
+                <h2><img src="../images/members/zahf.png">Zahf<br>Team Leader</h2>
                 <p>Founder of Dragon-Force-Studio. He leads the development of the team, making sure the content made by the DragonForce is high quality.</p>
             </div>
             <div class="profile" id="twiggy">
-                <h2><img src="../images/members/Twiggy.png">TWIGGY<br>The modeller</h2>
+                <h2><img src="../images/members/Twiggy.png">TWIGGY<br>Team Modeler</h2>
                 <p>
-                    Modeller and animator of the team. Always wanted to tame and ride a dragon through the vast biomes. I'm still learning more and more , everytime I make a new model I learn something new to take my model to the next level.
+                    Modeler and animator of the team. Always wanted to tame and ride a dragon through the vast biomes. I'm still learning more and more , everytime I make a new model I learn something new to take my model to the next level.
                 </p>
                 <br>
                 <a href="https://m.youtube.com/channel/UCAvNrRs37Gt5b2biu1N7-oQ">YouTube channel</a>
@@ -138,15 +138,15 @@
                 <a href="https://twitter.com/TWIGGY_1006?s=09">Twitter</a>
             </div>
             <div class="profile" id="foxfocus">
-                <h2><img src="../images/members/foxfocus.png">FoxFocus<br>Team Modeller</h2>
+                <h2><img src="../images/members/foxfocus.png">FoxFocus<br>Team Modeler</h2>
                 <p>A 14 year old modeler, She draws, do creative writing, yoga, and comic reading.</p>
             </div>
             <div class="profile" id="demi">
-                <h2><img src="../images/members/demigods.png">Demi<br>Team Modeller</h2>
+                <h2><img src="../images/members/demigods.png">Demi<br>Team Modeler</h2>
                 <p>A.k.a Demigod. An artist with many dreams.</p>
             </div>
             <div class="profile" id="ripper">
-                <h2><img src="../images/members/LegendaryRipper.png">Reapper<br>Team Modeller</h2>
+                <h2><img src="../images/members/LegendaryRipper.png">Reapper<br>Team Modeler</h2>
                 <p>A 14 years old teenager who loves making models and texture. Good at textures and models i love drawing.</p>
             </div>
             <div class="profile" id="hanprogramer">
@@ -158,11 +158,11 @@
                 <p>A 15 year-old guy who loves art of any sort.</p>
             </div>
             <div class="profile" id="code_error">
-                <h2><img src="../images/members/Code_Error.jpg">Core_Error<br>Team Modeller</h2>
+                <h2><img src="../images/members/Code_Error.jpg">Core_Error<br>Team Modeler</h2>
                 <p>A 15 year old who enjoys creating fantasy models and story writing. Xbox gamer tag "killen V".</p>
             </div>
             <div class="profile" id="brexit">
-                <h2><img src="../images/members/brexit.jpg">Brexit_Box<br>Team Modeller</h2>
+                <h2><img src="../images/members/brexit.jpg">Brexit_Box<br>Team Modeler</h2>
                 <p>A bossy teenager who makes models,works out,occasionally spars when they have the chance, and watches anime.</p>
             </div>
             <div class="profile" id="hax">
@@ -170,7 +170,7 @@
                 <p>Minecraft Bedrock Edition modder, creator of the Tinker's Legacy mod.</p>
             </div>
             <div class="profile" id="koda">
-                <h2><img src="../images/members/KodaSoda.png">Koda Soda<br>Team Modeller</h2>
+                <h2><img src="../images/members/KodaSoda.png">Koda Soda<br>Team Modeler</h2>
                 <p>Just an ordinary dude online that likes to model and draw.</p>
             </div>
             <div class="profile" id="lykos">
@@ -178,11 +178,11 @@
                 <p>I'm Lykos, I'm 14 years old, and I'll help in anyway that I can!</p>
             </div>
             <div class="profile" id="butter">
-                <h2><img src="../images/members/Majesticbutter.png">MajesticButter<br>Coder</h2>
+                <h2><img src="../images/members/Majesticbutter.png">Majestik Butter<br>Coder</h2>
                 <p>A person who likes chiken numgets, game development and animating</p>
             </div>
             <div class="profile" id="crackerjack96">
-                <h2><img src="../images/members/crackerjack96.png">Crackerjack96<br>Team Modeller</h2>
+                <h2><img src="../images/members/crackerjack96.png">Crackerjack96<br>Team Modeler</h2>
                 <p>A 16 year old that’s really good at making plot and story in any shape or form</p>
             </div>
         </div>
