--- a/subpages/about.html
+++ b/subpages/about.html
@@ -179,11 +179,11 @@
             </div>
             <div class="profile" id="butter">
                 <h2><img src="../images/members/Majesticbutter.png">Majestik Butter<br>Coder</h2>
-                <p>A person who likes chiken numgets, game development and animating</p>
+                <p>A person who likes chiken numgets, game development and animating.</p>
             </div>
             <div class="profile" id="crackerjack96">
                 <h2><img src="../images/members/crackerjack96.png">Crackerjack96<br>Team Modeler</h2>
-                <p>A 16 year old that’s really good at making plot and story in any shape or form</p>
+                <p>A 16 year old that’s really good at making plot and story in any shape or form.</p>
             </div>
         </div>
 
