--- a/subpages/about.html
+++ b/subpages/about.html
@@ -21,7 +21,7 @@
         <meta property="og:site" content="https://dragon-force-studio.codragon-force-studio.com" /> <!-- website link -->
         <meta property="og:title" content="About Us"/> <!-- title shown in the actual shared post -->
         <meta property="og:description" content="We are Dragon Force Studio,we develop quality addons, maps, texture packs, and skins for minecraft bedrock" /> <!-- description shown in the actual shared post -->
-        <meta property="og:image" content="images/dfs.jpg" /> <!-- image link, make sure it's jpg -->
+        <meta property="og:image" content="../images/dfs.jpg" /> <!-- image link, make sure it's jpg -->
         <meta property="og:url" content="https://dragon-force-studio.com" /> <!-- where do you want your post to link to -->
         <meta property="og:type" content="article" />
 
