--- a/subpages/about.html
+++ b/subpages/about.html
@@ -123,14 +123,13 @@
 
         <div class="profile-container">
             <div class="profile" id="zahf">
-                
                 <h2><img src="../images/members/zahf.png">Zahf<br>Team Leader</h2>
                 <p>Founder of Dragon-Force-Studio. He leads the development of the team, making sure the content made by the DragonForce is high quality.</p>
             </div>
             <div class="profile" id="twiggy">
                 <h2><img src="../images/members/Twiggy.png">TWIGGY<br>Team Modeler</h2>
                 <p>
-                    Modeler and animator of the team. Always wanted to tame and ride a dragon through the vast biomes. I'm still learning more and more , everytime I make a new model I learn something new to take my model to the next level.
+                    Aspirational modeler on the road to success.
                 </p>
                 <br>
                 <a href="https://m.youtube.com/channel/UCAvNrRs37Gt5b2biu1N7-oQ">YouTube channel</a>
@@ -142,7 +141,7 @@
                 <p>A 14 year old modeler, She draws, do creative writing, yoga, and comic reading.</p>
             </div>
             <div class="profile" id="demi">
-                <h2><img src="../images/members/demigods.png">Demi<br>Team Modeler</h2>
+                <h2><img src="../images/members/demigods.png">Demi<br>Team Manager</h2>
                 <p>A.k.a Demigod. An artist with many dreams.</p>
             </div>
             <div class="profile" id="ripper">
@@ -159,7 +158,7 @@
             </div>
             <div class="profile" id="code_error">
                 <h2><img src="../images/members/Code_Error.jpg">Core_Error<br>Team Modeler</h2>
-                <p>A 15 year old who enjoys creating fantasy models and story writing. Xbox gamer tag "killen V".</p>
+                <p>A modeler and texturer who began his passion, after discovering the possibility of modding on bedrock. Once I saw the potential to learn and help create a better bedrock experience that I missed as a kid; I began to practice until I made it into our team. I’ve learned much from the team and appreciate everyone’s effort to create a greater Minecraft experience.</p>
             </div>
             <div class="profile" id="brexit">
                 <h2><img src="../images/members/brexit.jpg">Brexit_Box<br>Team Modeler</h2>
