--- a/subpages/about.html
+++ b/subpages/about.html
@@ -138,7 +138,7 @@
             </div>
             <div class="profile" id="foxfocus">
                 <h2><img src="../images/members/foxfocus.png">FoxFocus<br>Team Modeler</h2>
-                <p>A 14 year old modeler, She draws, do creative writing, yoga, and comic reading.</p>
+                <p>A 15 year old modeler who draws, do creative writing, sing and dance. She aims to create and implement quality textures and models to receive satisfaction from audience.</p>
             </div>
             <div class="profile" id="demi">
                 <h2><img src="../images/members/demigods.png">Demi<br>Team Manager</h2>
