Updated things zahf asked
Download Button
Email support
Download from Playstore button

--- a/subpages/contact.html
+++ b/subpages/contact.html
@@ -113,6 +113,7 @@
                 <a target="_blank" href="https://www.youtube.com/c/zahfgaming" style="text-align: center"><button>Youtube</button></a>
                 <a target="_blank" href="https://twitter.com/ck_zahf22?s=09" style="text-align: center"><button class="twitterbtn">Twitter</button></a>
                 <a target="_blank" href="https://facebook.com/zahfgaming" style="text-align: center"><button class="facebookbutton">Facebook</button></a>
+                <a style="text-align: center; margin: auto; padding: 16px;">support@dragon-force-studio.com</a>
             </div>
         </div>
         <div class="footer">
