--- a/subpages/about.html
+++ b/subpages/about.html
@@ -184,6 +184,10 @@
                 <h2><img src="../images/members/crackerjack96.png">Crackerjack96<br>Team Modeler</h2>
                 <p>A 16 year old that’s really good at making plot and story in any shape or form.</p>
             </div>
+            <div class="profile" id="luc">
+                <h2><img src="../images/members/LusciousKnees.png">LusciousKneez<br>Team Modeler</h2>
+                <p>Ambitious 14-year-old; I make models, watch anime, Star Wars, and I don’t care.</p>
+            </div>
         </div>
 
         <a href="/index.html"><button>Browse our content</button></a>
