--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
 			
 			window.onresize = onWindowResize;
 		</script>
+<script>!function(r,u,m,b,l,e){r._Rumble=b,r[b]||(r[b]=function(){(r[b]._=r[b]._||[]).push(arguments);if(r[b]._.length==1){l=u.createElement(m),e=u.getElementsByTagName(m)[0],l.async=1,l.src="https://rumble.com/embedJS/ukpjy7"+(arguments[1].video?'.'+arguments[1].video:'')+"/?url="+encodeURIComponent(location.href)+"&args="+encodeURIComponent(JSON.stringify([].slice.apply(arguments))),e.parentNode.insertBefore(l,e)}})}(window, document, "script", "Rumble");</script>
+
+<script>
+Rumble("play", {"video":"vdixj7","div":"rumble_vdixj7"});</script>
 	</head>
 	<body onload="onWindowResize()">
 		<script>
@@ -100,6 +104,7 @@
 				</div>
 			</div>
 		</div>
+<div id="rumble_vdixj7"></div>
 		<div class="subnavbar">
 			<div class="subnavitems">
 				<a href="/index.html">Home</a>
