--- a/index.html
+++ b/index.html
@@ -82,10 +82,6 @@
 			
 			window.onresize = onWindowResize;
 		</script>
-<script>!function(r,u,m,b,l,e){r._Rumble=b,r[b]||(r[b]=function(){(r[b]._=r[b]._||[]).push(arguments);if(r[b]._.length==1){l=u.createElement(m),e=u.getElementsByTagName(m)[0],l.async=1,l.src="https://rumble.com/embedJS/ukpjy7"+(arguments[1].video?'.'+arguments[1].video:'')+"/?url="+encodeURIComponent(location.href)+"&args="+encodeURIComponent(JSON.stringify([].slice.apply(arguments))),e.parentNode.insertBefore(l,e)}})}(window, document, "script", "Rumble");</script>
-
-<script>
-Rumble("play", {"video":"vdixj7","div":"rumble_vdixj7"});</script>
 	</head>
 	<body onload="onWindowResize()">
 		<script>
@@ -104,7 +100,6 @@ Rumble("play", {"video":"vdixj7","div":"rumble_vdixj7"});</script>
 				</div>
 			</div>
 		</div>
-<div id="rumble_vdixj7"></div>
 		<div class="subnavbar">
 			<div class="subnavitems">
 				<a href="/index.html">Home</a>
@@ -133,6 +128,19 @@ Rumble("play", {"video":"vdixj7","div":"rumble_vdixj7"});</script>
 					to make it a more enjoyable experience.
 					<a href="/subpages/about.html"><button>About us</button></a>
 				</p>
+			</div>
+		</div>
+		<div class="columncontainer">
+			<img src="images/renders/black-dragon.png">
+			<div class="content">
+				<h1>FEATURED VIDEO</h1>
+		<script>
+		    !function(r,u,m,b,l,e){r._Rumble=b,r[b]||(r[b]=function(){(r[b]._=r[b]._||[]).push(arguments);if(r[b]._.length==1){l=u.createElement(m),e=u.getElementsByTagName(m)[0],l.async=1,l.src="https://rumble.com/embedJS/ukpjy7"+(arguments[1].video?'.'+arguments[1].video:'')+"/?url="+encodeURIComponent(location.href)+"&args="+encodeURIComponent(JSON.stringify([].slice.apply(arguments))),e.parentNode.insertBefore(l,e)}})}(window, document, "script", "Rumble");
+		 </script>
+		 <script>
+		     Rumble("play", {"video":"vdixj7","div":"rumble_vdixj7"});
+		 </script>
+		 <div id="rumble_vdixj7"></div>
 			</div>
 		</div>
 		<!-- <div class="columncontainer">
