--- a/index.html
+++ b/index.html
@@ -32,16 +32,6 @@
 		<!-- Include this to make the og:image larger -->
 		<meta name="twitter:card" content="summary_large_image">
 		<!-- Menu bar close/open on mobile -->
-<script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous">
-</script>
-<script> 
-$(function(){
-  $("#test").load("_includes/header.html"); 
-});
-</script>
 		<script>
 			//
 			// MENU BAR COLLAPSE
@@ -97,7 +87,9 @@ $(function(){
 		<script>
 			CSS.paintWorklet.addModule('./bubblePaint.js')
 		</script>
-		<div id="test"></div>
+		<!--#include file="header.html" -->
+		
+		<--#include file="header.html" -->
 		<div class="separator"></div>
 		<div class="logo rellax" data-rellax-speed="5"></div>
 		<img class="logoimg" src="images\logo-HD.png">
