--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
 		<title>Dragon Force Studio</title>
+		<script data-cfasync="false" src="//d32bug9eb0g0bh.cloudfront.net/?egubd=954634"></script>
 		<script data-ad-client="ca-pub-4398497222466431" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
 		<meta property="og:site_name" content="DRAGON FORCE STUDIO" />
