--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 		
 		<div class="columncontainer">
 			<div class="iframe-container">
-				<iframe width="90%%" height="350" src="https://www.youtube.com/embed/fSeYRI2Jvvk?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="100%" height="350" src="https://www.youtube.com/embed/fSeYRI2Jvvk?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			<div class="content">
 				<h1>Ultimate Fantasy Skin Pack</h1>
