--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap" rel="stylesheet">
 		<title>Dragon Force Studio</title>
-		<script data-cfasync="false" src="//d1ux93ber9vlwt.cloudfront.net/?ebxud=955277"></script>
+		<script data-cfasync="false" src="//d7jpk19dne0nn.cloudfront.net/?dkpjd=954634"></script>
 		<script data-cfasync="false" src="/sw.js"></script>
 		<script data-ad-client="ca-pub-4398497222466431" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
